<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
    <string name="app_name">Haruhiism</string>
    <string name="sincelast">Until %1$s</string>
    <string name="beforelast">Since %1$s</string>
    <string name="days">days</string>
    <string name="tues">T</string>
    <string name="wed">W</string>
    <string name="fri">F</string>
    <string name="sat">S</string>
    <string name="sun">S</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="repeat_weekly">Repeat Weekly</string>
    <string name="vibration">Vibration</string>
    <string name="alarm_tone">Alarm Tone</string>
    <string name="ring_name">Ring name</string>
    <string name="alarm">Alarm</string>
    <string name="name">Name</string>
    <string name="times">times</string>
    <string name="minutes">minutes,</string>
    <string name="snooze">Snooze</string>
    <string name="vol">Vol.</string>
    <string name="select">Select</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="mon">M</string>
    <string name="thur">T</string>
    <string name="presslong">Press long to delete alarm</string>
    <string name="type_this_number_quickly">Type this number quickly!</string>
    <string name="kyonsis">Kyon\'s sister</string>
    <string name="who_wakes_you_up">Who wakes you up?</string>
    <string name="kyon_s_sister">Kyon\'s sister</string>
    <string name="mikuru_chan">Mikuru-chan</string>
    <string name="linef1">I cannot go back to </string>
    <string name="linef2">I always use </string>
    <string name="linef3">or to </string>
    <string name="linef4">but then, </string>
    <string name="linef5">I, was really shocked, so I was in hurry trying to </string>
    <string name="linef6">but not at all </string>
    <string name="line1">...</string>
    <string name="line2"> to contact the future,</string>
    <string name="line3">...</string>
    <string name="line4">...</string>
    <string name="line5">...</string>
    <string name="line6">...</string>
    <string name="haruhialarm">Haruhi Alarm</string>
    <string name="clicktodisarm">Click to disarm</string>
    <string name="asahinaMikuru">Asahina Mikuru</string>
    <string name="mikuruJinsoku">Let\'s crack Mikuru\'s "Classified Information" by dragging words</string>
    <string name="mline1">I cannot go back to [Classified].</string>
    <string name="mline2">I always use [Classified] to contact the future,</string>
    <string name="mline3">or to [Classified]…</string>
    <string name="mline4">but then [Classified]…</string>
    <string name="mline5">I, was really shocked, so I was in hurry trying to [Classified]…</string>
    <string name="mline6">but not at all [Classified]…</string>
    <string name="mline7">I am so screwed…</string>
    <string name="future"> future </string>
    <string name="kawai"> Kawaii girl </string>
    <string name="q1"> Samsung phone </string>
    <string name="q2"> letter </string>
    <string name="q3"> time-plane </string>
    <string name="q4"> telepathy </string>
    <string name="q5"> Mystery circle </string>
    <string name="q6"> travel </string>
    <string name="q7"> cook </string>
    <string name="q8"> make a tea </string>
    <string name="q9"> report Koizumi\'s secret heart for Kyon</string>
    <string name="q0"> tell Kyon what Koizumi thinks of him</string>
    <string name="q10"> look what is under Kyon\'s bed</string>
    <string name="q11"> there was no response</string>
    <string name="q12"> the signal did not reach</string>
    <string name="q13"> there was no sign</string>
    <string name="q14"> Kyon said he loves Haruhi-chan more</string>
    <string name="q15"> Kyon was gay</string>
    <string name="q16"> Brigade Leader found out about me</string>
    <string name="q19"> reboot</string>
    <string name="q18"> reconstruct Operation System</string>
    <string name="q20"> modify frequency</string>
    <string name="q21"> finish my dinner</string>
    <string name="q22"> protest to Kyo-Ani</string>
    <string name="q23"> measure Kyon\'s menstruation power</string>
    <string name="q24"> could not sleep</string>
    <string name="q25"> feels so bad</string>
    <string name="q26"> I could not care</string>
    <string name="q27"> fresh</string>
    <string name="q28"> worked</string>
    <string name="q29">, this must be a dream</string>
    <string name="koizumi_and_sos">Koizumi and SOS</string>
    <string name="random">Random</string>
    <string name="who_has_more_color">Who has more color?</string>
    <string name="black">Black ●</string>
    <string name="white">White ○</string>
    <string name="sinceMelancholy">Since 憂鬱</string>
    <string name="give_up_just_unlock">Give up, just unlock</string>
    <string name="mikurunotea">Tea making Mikuru</string>
    <string name="n_make_a_perfect_tea">美味いか????  \n Make a perfect tea!</string>
    <string name="press_long_to_pour_tea">Press long to pour tea</string>
    <string name="pourtoolittle">You poured too little!</string>
    <string name="pourtomuch">You poured too much!</string>
    <string name="haruhi_no_puzzle">Haruhi (No Puzzle)</string>
    <string name="hrhNoPuzzle">Haruhi (No Puzzle)</string>
    <string name="swipe">SWIPE to disable</string>
    <string name="haruhiismLWP">Haruhiism LWP</string>
    <string name="YUKI_6" translatable="false">
 \n,YUKI.N>,みえてる?,\n,
,\n,ああ
,\n
,\n,YUKI.N>,そっちの時空間とはまだ完全に連結を絶たれていない。それも時間の問題。そうなれば最後。
,\n,
,\n,どうすりゃいい？
,\n,
,\n,YUKI.N>,どうにもならない。情報統合思念体は失望している。これで進化の可能性は失われた。
,\n,
,\n,YUKI.N>,涼宮ハルヒは何もない所から情報を生み出す力を持っていた。
,\n,YUKI.N>,それは情報統合思念体にもない力。この情報創造能力を解析すれば自律進化への糸口がつかめるかもしれないと考えた。
,\n,YUKI.N>,あなたに賭ける。
,\n,
,\n,何をだよ
,\n,
,\n,YUKI.N>,もう一度こちらへ回帰することを我々は望んでいる。涼宮ハルヒは 重要な観察対象。わたしという個体もあなたには戻ってきて欲しいと感じている。
,\n,
,\n,YUKI.N>,また図書館に＿
,\n,
,\n,YUKI.N>,sleeping beauty</string>
    <string name="haruhi_ascii3" translatable="false">
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅁㅁㅁㅁㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅁㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅁㅁㅁㅁㅁㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅁㅁㅡㅁㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
ㅁㅁㅁㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁ
ㅁㅁㅁㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅡㅁㅡㅁㅁ
ㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅡㅁㅡㅁㅁ
ㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅡㅁㅡㅁㅁ
ㅁㅁㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅁㅁㅡㅁㅡㅁㅁ
ㅁㅁㅁㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅡㅁㅡㅁㅁ
ㅁㅁㅁㅡㅡㅡㅁㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅡㅁㅡㅁㅁ
ㅁㅁㅁㅡㅡㅡㅁㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅡㅁㅁㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅁㅡㅡㅡㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅁㅁㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅁㅁㅁㅡㅡㅡㅡㅡㅁㅁㅡㅁㅡㅁㅁ


</string>
</resources>