<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.haruhi.bismark439.haruhiism.AlarmAdd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClose"
            android:text="@string/close"/>

        <Button
            android:id="@+id/addAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onDone"
            android:text="@string/done"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:orientation="vertical">

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/my_border_green"
                    android:onClick="onClickDay"
                    android:padding="12dp"
                    android:tag="0"
                    android:textStyle="bold"
                    android:text="@string/mon"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/my_border_green"
                    android:onClick="onClickDay"
                    android:padding="12dp"
                    android:tag="1"
                    android:textStyle="bold"
                    android:text="@string/tues"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/my_border_green"
                    android:onClick="onClickDay"
                    android:padding="12dp"
                    android:tag="2"
                    android:textStyle="bold"
                    android:text="@string/wed"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/my_border_green"
                    android:onClick="onClickDay"
                    android:padding="12dp"
                    android:tag="3"
                    android:textStyle="bold"
                    android:text="@string/thur"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/my_border_green"
                    android:onClick="onClickDay"
                    android:padding="12dp"
                    android:tag="4"
                    android:textStyle="bold"
                    android:text="@string/fri"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/my_border"
                    android:onClick="onClickDay"
                    android:padding="12dp"
                    android:tag="5"
                    android:textStyle="bold"
                    android:text="@string/sat"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/my_border"
                    android:onClick="onClickDay"
                    android:padding="12dp"
                    android:tag="6"
                    android:textStyle="bold"
                    android:text="@string/sun"
                    android:textColor="#FF0000"
                    android:textSize="16sp"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/a_repeatCheck"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:text="@string/repeat_weekly"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_wakes_you_up"/>
            <RadioGroup
                android:id="@+id/waker_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                android:id="@+id/waker_haruhi_basic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:text="@string/haruhi_no_puzzle"/>
                <RadioButton
                    android:id="@+id/waker_random"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:layout_marginBottom="10dp"
                    android:text="@string/random"/>
                <RadioButton
                    android:id="@+id/waker_kyonsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:layout_marginBottom="10dp"
                    android:text="@string/kyon_s_sister"/>
                <RadioButton
                    android:id="@+id/waker_mikuruTea"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:text="@string/mikurunotea"/>
                <RadioButton
                    android:id="@+id/waker_koizumi"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:text="@string/koizumi_and_sos"/>
                <RadioButton
                    android:id="@+id/waker_mikuru"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:text="@string/mikuru_chan"/>

            </RadioGroup>

            <CheckBox
                android:id="@+id/a_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:text="@string/vibration"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/alarm_tone"
                        android:textSize="16dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/ring_name"
                        android:textSize="12dp"/>
                </LinearLayout>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onSelectSong"
                    android:text="@string/select"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/vol"/>

                <SeekBar
                    android:id="@+id/a_volseek"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:max="15"
                    android:progress="10"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/snooze"
                    android:textSize="16dp"/>

                <Spinner
                    android:id="@+id/a_snzMinutes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minutes"/>

                <Spinner
                    android:id="@+id/a_snzTimes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/times"/>

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/a_nameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:text="@string/alarm"
                    android:textSize="12dp"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
