<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/cr_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="4"
        android:textColor="#AA111111"
        android:text="07 : 00"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="10dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/cr_repeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#AF111111"
                android:layout_weight="1"
                android:text="Repeat"/>

            <TextView
                android:id="@+id/cr_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alarm_name"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cr_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="0"
                android:textStyle="bold"
                android:text="@string/mon"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="1"
                android:textStyle="bold"
                android:text="@string/tues"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="2"
                android:textStyle="bold"
                android:text="@string/wed"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="3"
                android:textStyle="bold"
                android:text="@string/thur"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="4"
                android:textStyle="bold"
                android:text="@string/fri"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="5"
                android:textStyle="bold"
                android:text="@string/sat"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="6"
                android:textStyle="bold"
                android:text="@string/sun"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>

    <ToggleButton
        android:id="@+id/cr_toggle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="ToggleButton"/>

</LinearLayout>
